fixed too long link_url-select-field in ullNews

--- a/plugins/ullCmsThemeNGPlugin/web/css/main.css
+++ b/plugins/ullCmsThemeNGPlugin/web/css/main.css
@@ -73,6 +73,14 @@ a:visited {
   margin-left: 1em;
 }
 
+/**
+ * TableTool
+ */
+
+select#fields_link_url_pages {
+  max-width: 35em;
+}
+
 
 /*
  * ************************************************
